tests/ui/transmutability/malformed-program-gracefulness/unknown_src_field.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/unknown_src_field.rs:17:27
   |
LL |     #[repr(C)] struct Src(Missing);
   |                           ^^^^^^^ not found in this scope

error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/unknown_src_field.rs:23:36
   |
LL |     #[repr(C)] struct Src(&'static Missing);
   |                                    ^^^^^^^ not found in this scope

error[E0277]: `should_gracefully_handle_unknown_src_field::Src` cannot be safely transmuted into `should_gracefully_handle_unknown_src_field::Dst`
  --> $DIR/unknown_src_field.rs:19:36
   |
LL |     assert::is_transmutable::<Src, Dst>();
   |                                    ^^^ `should_gracefully_handle_unknown_src_field::Src` has an unknown layout
   |
note: required by a bound in `is_transmutable`
  --> $DIR/unknown_src_field.rs:12:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error[E0277]: `should_gracefully_handle_unknown_src_ref_field::Src` cannot be safely transmuted into `should_gracefully_handle_unknown_src_ref_field::Dst`
  --> $DIR/unknown_src_field.rs:25:36
   |
LL |     assert::is_transmutable::<Src, Dst>();
   |                                    ^^^ `should_gracefully_handle_unknown_src_ref_field::Src` has an unknown layout
   |
note: required by a bound in `is_transmutable`
  --> $DIR/unknown_src_field.rs:12:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src>
   |              ^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0412.
For more information about an error, try `rustc --explain E0277`.
